--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,22 +158,22 @@ While the focus here is on vertical gradients, it is important to note that in h
 
 Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
 Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a, @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985]. 
-In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016]. 
+Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989]. 
+In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001;  @bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor, with the profile shape modified by leaf area density, canopy height, and canopy structure across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001].
-This gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`) [@chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
-The implication of this light gradient is that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see section 2.2).
+The implication of this light gradient is that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
 Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy [@juckerCanopyStructureTopography2018].
 This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. 
-Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom of the vertical profile (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
-The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see section 2.2).
+Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom of the vertical profile.
+The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see sections 2.2, 4.1).
 
 Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated CO~2~ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
@@ -181,7 +181,7 @@ Atmospheric CO~2~ concentrations tend to be higher near the ground at night, ass
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
 In combination with $T_{air}$, RH determines vapor pressure deficit (VPD)-- the driving force of water loss from leaves--which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
-The implication is that canopy leaves face higher $g_b$ and associated potential for water and heat loss (see section 2.2).
+The implication is that canopy leaves face higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
 
 Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
 The $T_{air}$ gradient from the upper canopy to the understory varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation type [@defrenneForestMicroclimatesClimate2021]. 
@@ -191,7 +191,7 @@ These usually-modest gradients in $T_{air}$ combine with the above-described gra
 
 ## 2. Leaf temperature 
 
-$T_{leaf}$ is strongly tied to $T_{air}$, and is further influenced by other micrometeorological drivers (reviewed above) and by leaf traits and stomatal conductance (see "Leaf traits" and "Leaf gas exchange and its thermal sensitivity"), with leaves adjusting to their environment to approach, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020; @drakeNoEvidenceHomeostatic2020]. 
+$T_{leaf}$ is strongly tied to $T_{air}$, and is further influenced by other micrometeorological drivers (section 1) and by leaf traits and stomatal conductance (see sections 3-4), with leaves adjusting to their environment to approach, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020; @drakeNoEvidenceHomeostatic2020]. 
 Leaves are typically cooler than the air at night, and under some daytime conditions (cloudy skies, high wind speeds, and high $T_{air}$). 
 Leaves are typically warmer than air when under full sunlight, especially under slow wind speeds and low $T_{air}$ [@doughtyAreTropicalForests2008].
 While $T_{leaf}$ is rarely exactly equal to $T_{air}$, it is most commonly within a few degrees [@cavaleriColdbloodedForestsWarming2020]. 
@@ -205,7 +205,7 @@ Sensible heat flux between leaf and air is regulated by leaf boundary layer cond
 Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD, where $g_b$ increases with wind speed and $g_s$ can decline at high VPD due to stomatal closure.
 Therefore, $T_{leaf}-T_{air}$ decreases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and decreases with $g_s$ (Fig. `r fig_leaf_T`e).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both humid and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. swr = short wave radiation (W/m^2^); ws = wind speed (m/s); rh= relative humidity; lw = leaf width (m); gs = stomatal conductance (mmol m^2^/s). ](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both humid and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. ](leaf_energy_balance/fig3_leafenergy.png)
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
 With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) and larger $g_s$ [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
@@ -217,8 +217,8 @@ Therefore, at high solar radiation loads, leaves can maintain $T_{leaf}$ closer 
 
 The basic biophysical principles outlined above shape the tendency for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater tendency for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
-In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see "Leaf Traits" and "Leaf gas exchange and its thermal sensitivity" sections) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
+However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
+In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
 In contrast, greater RH and lower wind speeds in the understory may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
 The propensity for $T_{leaf}$ to be elevated above $T_{air}$ is not expected to be uniform across time and space, but rather to vary with micrometeorological conditions. Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a greater propensity for $T_{leaf} - T_{air}$ to be elevated in the canopy compared to the understory (Fig.`r fig_leaf_T`).
@@ -231,7 +231,7 @@ Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (F
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
 Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do buffered lower-canopies, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021a; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
-This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`b,e, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
+This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
 The latter can result from a combination of still air in the lower canopy, and the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020].
 
@@ -239,7 +239,7 @@ Similarly, in very open forests or savannas, trees growing close to the ground c
 
 Leaf traits shape $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015;@michaletzEnergeticCarbonEconomic2016;  @zwienieckiHydraulicLimitationsImposed2004].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
-This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`). 
+This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`). 
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
@@ -280,12 +280,12 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to higher conductance ($g_b$ or maximal $g_s$) and/or reflectance, which help to lower $T_{leaf}$-$T_{air}$ (Table `r table_leaf_traits`). 
 Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017; @mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (reduces $g_b$).
 Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
-Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see also "Leaf gas exchange and its thermal sensitivity" section, @zwienieckiHydraulicLimitationsImposed2004]. 
-At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness (protects against water loss) and higher trichome density [reduces $g_b$ or increases boundary layer turbulence; @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016].
+Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
+At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [reduces $g_b$ or increases boundary layer turbulence, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016].
 In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. 
-In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum air temperature ($T_{air_{max}}$) and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
+In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
-Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see "Leaf gas exchange and its thermal sensitivity" section, Table `r table_leaf_metabolism`).
+Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
 Sun leaves have higher concentrations (per unit area) of elements such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical to leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes [@scartazzaInvestigatingEuropeanBeech2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
 Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the canopy give shade leaves greater PAR absorptance efficiency (Table `r table_leaf_traits`).
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure higher (see "Leaf gas exchange and its thermal sensitivity" section, Table `r table_leaf_metabolism`) result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C concentrations in leaf tissues (Table `r table_leaf_traits`).
@@ -595,7 +595,7 @@ Funding was provided by the Smithsonian Institution.
 NV and KAT planned and designed the research, with contributions from all authors. NV reviewed the literature. NV, IM, EMO and MNS contributed data and analyses. All authors contributed to writing and revising of the manuscript.
 
 ## Data Availability
-No new data were created in this study. New analyses are based upon data available from the National Ecological Observatory Network (NEON; https://www.neonscience.org/). The R scripts used for new analyses presented here are available from the authors upon reasonable request. 
+No new data were created in this study. New analyses are based upon data available from the National Ecological Observatory Network (NEON; https://www.neonscience.org/). The R scripts used for new analyses are (*will be*) available via GitHub (https://github.com/EcoClimLab/vertical-thermal-review) and archived in Zenodo (DOI: [TBD]). 
 
 ## SI files
 
