--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -309,7 +309,6 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends in traits and sometimes metabolism [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
 For instance, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [mirroring the faction of individuals, @conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. 
 However, exceptions exist: at least among evergreen species, shade tolerant species tend to have higher LMA than light demanding species, by contrast with the generally higher LMA for sun than shade leaves within canopies [@luskWhyAreEvergreen2008].
-Further, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
 Therefore, vertical gradients in $T_{leaf}$ and metabolism within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
 
 ## 4. Leaf gas exchange and its thermal sensitivity
@@ -350,10 +349,11 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 Leaf hydraulic, stomatal conductance, and $g_b$ are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
 Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, because water supply often cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
+However, when water supply cannot meet the demands incurred by the high irradiance, VPD and $g_b$ experienced by sun leaves typically at noon, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
 In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which $g_s$ is maximal, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021a]. 
-This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
+
+Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_{leaf}$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, higher irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Therefore, although typically $g_s$ increases with light, due to hydraulic constraints, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency [@kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
 
 ### 4.2. Photosynthesis
 
